LanguageServer/ANTLRv2Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ANTLRv2Parser.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace LanguageServer {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class ANTLRv2Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DOC_COMMENT=1, PARSER=2, LEXER=3, RULE=4, BLOCK=5, OPTIONAL=6, CLOSURE=7, 
		POSITIVE_CLOSURE=8, SYNPRED=9, RANGE=10, CHAR_RANGE=11, EPSILON=12, ALT=13, 
		EOR=14, EOB=15, EOA=16, ID=17, ARG=18, ARGLIST=19, RET=20, LEXER_GRAMMAR=21, 
		PARSER_GRAMMAR=22, TREE_GRAMMAR=23, COMBINED_GRAMMAR=24, INITACTION=25, 
		LABEL=26, TEMPLATE=27, SCOPE=28, SEMPRED=29, GATED_SEMPRED=30, SYN_SEMPRED=31, 
		BACKTRACK_SEMPRED=32, FRAGMENT=33, TREE_BEGIN=34, ROOT=35, BANG=36, REWRITE=37, 
		ACTION_CONTENT=38, SL_COMMENT=39, ML_COMMENT=40, INT=41, CHAR_LITERAL=42, 
		STRING_LITERAL=43, BEGIN_ARGUMENT=44, BEGIN_ACTION=45, OPTIONS=46, TOKENS=47, 
		HEADER=48, CLASS=49, EXTENDS=50, LEXCLASS=51, TREEPARSER=52, EXCEPTION=53, 
		CATCH=54, FINALLY=55, GRAMMAR=56, PRIVATE=57, PROTECTED=58, PUBLIC=59, 
		RETURNS=60, THROWS=61, TREE=62, OPEN_ELEMENT_OPTION=63, CLOSE_ELEMENT_OPTION=64, 
		AT=65, COLON=66, COLONCOLON=67, COMMA=68, DOT=69, EQUAL=70, LBRACE=71, 
		LBRACK=72, LPAREN=73, OR=74, PLUS=75, QM=76, RBRACE=77, RBRACK=78, RPAREN=79, 
		SEMI=80, SEMPREDOP=81, STAR=82, DOLLAR=83, PEQ=84, NOT=85, WS=86, TOKEN_REF=87, 
		RULE_REF=88, END_ARGUMENT=89, UNTERMINATED_ARGUMENT=90, ARGUMENT_CONTENT=91, 
		END_ACTION=92, UNTERMINATED_ACTION=93, OPT_LBRACE=94, LEXER_CHAR_SET=95, 
		UNTERMINATED_CHAR_SET=96;
	public const int
		RULE_grammar_ = 0, RULE_header_ = 1, RULE_classDef = 2, RULE_fileOptionsSpec = 3, 
		RULE_parserOptionsSpec = 4, RULE_treeParserOptionsSpec = 5, RULE_lexerOptionsSpec = 6, 
		RULE_subruleOptionsSpec = 7, RULE_option = 8, RULE_optionValue = 9, RULE_lexerOption = 10, 
		RULE_lexerOptionValue = 11, RULE_charSet = 12, RULE_setBlockElement = 13, 
		RULE_tokensSpec = 14, RULE_tokenEntry = 15, RULE_tokensSpecOptions = 16, 
		RULE_superClass = 17, RULE_parserSpec = 18, RULE_lexerSpec = 19, RULE_treeParserSpec = 20, 
		RULE_rules = 21, RULE_rule_ = 22, RULE_ruleOptionsSpec = 23, RULE_throwsSpec = 24, 
		RULE_block = 25, RULE_alternative = 26, RULE_exceptionGroup = 27, RULE_exceptionSpec = 28, 
		RULE_exceptionSpecNoLabel = 29, RULE_exceptionHandler = 30, RULE_element = 31, 
		RULE_elementOptionSpec = 32, RULE_elementNoOptionSpec = 33, RULE_rule_ref_or_keyword_as = 34, 
		RULE_tree_ = 35, RULE_rootNode = 36, RULE_ebnf = 37, RULE_ast_type_spec = 38, 
		RULE_range = 39, RULE_terminal_ = 40, RULE_notTerminal = 41, RULE_qualifiedID = 42, 
		RULE_id = 43, RULE_action = 44, RULE_actionScopeName = 45, RULE_ruleAction = 46, 
		RULE_altList = 47, RULE_actionBlock = 48, RULE_argActionBlock = 49;
	public static readonly string[] ruleNames = {
		"grammar_", "header_", "classDef", "fileOptionsSpec", "parserOptionsSpec", 
		"treeParserOptionsSpec", "lexerOptionsSpec", "subruleOptionsSpec", "option", 
		"optionValue", "lexerOption", "lexerOptionValue", "charSet", "setBlockElement", 
		"tokensSpec", "tokenEntry", "tokensSpecOptions", "superClass", "parserSpec", 
		"lexerSpec", "treeParserSpec", "rules", "rule_", "ruleOptionsSpec", "throwsSpec", 
		"block", "alternative", "exceptionGroup", "exceptionSpec", "exceptionSpecNoLabel", 
		"exceptionHandler", "element", "elementOptionSpec", "elementNoOptionSpec", 
		"rule_ref_or_keyword_as", "tree_", "rootNode", "ebnf", "ast_type_spec", 
		"range", "terminal_", "notTerminal", "qualifiedID", "id", "action", "actionScopeName", 
		"ruleAction", "altList", "actionBlock", "argActionBlock"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'Parser'", "'Lexer'", null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'scope'", null, null, null, null, 
		"'fragment'", "'^('", "'^'", "'!'", null, null, null, null, null, null, 
		null, null, null, "'options'", "'tokens'", "'header'", "'class'", "'extends'", 
		"'lexclass'", "'treeparser'", "'exception'", "'catch'", "'finally'", "'grammar'", 
		"'private'", "'protected'", "'public'", "'returns'", "'throws'", "'tree'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'=>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DOC_COMMENT", "PARSER", "LEXER", "RULE", "BLOCK", "OPTIONAL", "CLOSURE", 
		"POSITIVE_CLOSURE", "SYNPRED", "RANGE", "CHAR_RANGE", "EPSILON", "ALT", 
		"EOR", "EOB", "EOA", "ID", "ARG", "ARGLIST", "RET", "LEXER_GRAMMAR", "PARSER_GRAMMAR", 
		"TREE_GRAMMAR", "COMBINED_GRAMMAR", "INITACTION", "LABEL", "TEMPLATE", 
		"SCOPE", "SEMPRED", "GATED_SEMPRED", "SYN_SEMPRED", "BACKTRACK_SEMPRED", 
		"FRAGMENT", "TREE_BEGIN", "ROOT", "BANG", "REWRITE", "ACTION_CONTENT", 
		"SL_COMMENT", "ML_COMMENT", "INT", "CHAR_LITERAL", "STRING_LITERAL", "BEGIN_ARGUMENT", 
		"BEGIN_ACTION", "OPTIONS", "TOKENS", "HEADER", "CLASS", "EXTENDS", "LEXCLASS", 
		"TREEPARSER", "EXCEPTION", "CATCH", "FINALLY", "GRAMMAR", "PRIVATE", "PROTECTED", 
		"PUBLIC", "RETURNS", "THROWS", "TREE", "OPEN_ELEMENT_OPTION", "CLOSE_ELEMENT_OPTION", 
		"AT", "COLON", "COLONCOLON", "COMMA", "DOT", "EQUAL", "LBRACE", "LBRACK", 
		"LPAREN", "OR", "PLUS", "QM", "RBRACE", "RBRACK", "RPAREN", "SEMI", "SEMPREDOP", 
		"STAR", "DOLLAR", "PEQ", "NOT", "WS", "TOKEN_REF", "RULE_REF", "END_ARGUMENT", 
		"UNTERMINATED_ARGUMENT", "ARGUMENT_CONTENT", "END_ACTION", "UNTERMINATED_ACTION", 
		"OPT_LBRACE", "LEXER_CHAR_SET", "UNTERMINATED_CHAR_SET"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ANTLRv2Parser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ANTLRv2Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ANTLRv2Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ANTLRv2Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Grammar_Context : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(ANTLRv2Parser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Header_Context[] header_() {
			return GetRuleContexts<Header_Context>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Header_Context header_(int i) {
			return GetRuleContext<Header_Context>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FileOptionsSpecContext fileOptionsSpec() {
			return GetRuleContext<FileOptionsSpecContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDefContext[] classDef() {
			return GetRuleContexts<ClassDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDefContext classDef(int i) {
			return GetRuleContext<ClassDefContext>(i);
		}
		public Grammar_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_grammar_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.EnterGrammar_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.ExitGrammar_(this);
		}
	}

	[RuleVersion(0)]
	public Grammar_Context grammar_() {
		Grammar_Context _localctx = new Grammar_Context(Context, State);
		EnterRule(_localctx, 0, RULE_grammar_);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==HEADER) {
				{
				{
				State = 100;
				header_();
				}
				}
				State = 105;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 107;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==OPTIONS) {
				{
				State = 106;
				fileOptionsSpec();
				}
			}

			State = 112;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOC_COMMENT) | (1L << BEGIN_ACTION) | (1L << CLASS) | (1L << LEXCLASS))) != 0)) {
				{
				{
				State = 109;
				classDef();
				}
				}
				State = 114;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 115;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Header_Context : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEADER() { return GetToken(ANTLRv2Parser.HEADER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ActionBlockContext actionBlock() {
			return GetRuleContext<ActionBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING_LITERAL() { return GetToken(ANTLRv2Parser.STRING_LITERAL, 0); }
		public Header_Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header_; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.EnterHeader_(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.ExitHeader_(this);
		}
	}

	[RuleVersion(0)]
	public Header_Context header_() {
		Header_Context _localctx = new Header_Context(Context, State);
		EnterRule(_localctx, 2, RULE_header_);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(HEADER);
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==STRING_LITERAL) {
				{
				State = 118;
				Match(STRING_LITERAL);
				}
			}

			State = 121;
			actionBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public RulesContext rules() {
			return GetRuleContext<RulesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LexerSpecContext lexerSpec() {
			return GetRuleContext<LexerSpecContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TreeParserSpecContext treeParserSpec() {
			return GetRuleContext<TreeParserSpecContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParserSpecContext parserSpec() {
			return GetRuleContext<ParserSpecContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionBlockContext actionBlock() {
			return GetRuleContext<ActionBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOC_COMMENT() { return GetToken(ANTLRv2Parser.DOC_COMMENT, 0); }
		public ClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.EnterClassDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.ExitClassDef(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefContext classDef() {
		ClassDefContext _localctx = new ClassDefContext(Context, State);
		EnterRule(_localctx, 4, RULE_classDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==BEGIN_ACTION) {
				{
				State = 123;
				actionBlock();
				}
			}

			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==DOC_COMMENT) {
				{
				State = 126;
				Match(DOC_COMMENT);
				}
			}

			State = 132;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 129;
				lexerSpec();
				}
				break;
			case 2:
				{
				State = 130;
				treeParserSpec();
				}
				break;
			case 3:
				{
				State = 131;
				parserSpec();
				}
				break;
			}
			State = 134;
			rules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileOptionsSpecContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPTIONS() { return GetToken(ANTLRv2Parser.OPTIONS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ANTLRv2Parser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ANTLRv2Parser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OptionContext[] option() {
			return GetRuleContexts<OptionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptionContext option(int i) {
			return GetRuleContext<OptionContext>(i);
		}
		public FileOptionsSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileOptionsSpec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.EnterFileOptionsSpec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.ExitFileOptionsSpec(this);
		}
	}

	[RuleVersion(0)]
	public FileOptionsSpecContext fileOptionsSpec() {
		FileOptionsSpecContext _localctx = new FileOptionsSpecContext(Context, State);
		EnterRule(_localctx, 6, RULE_fileOptionsSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			Match(OPTIONS);
			State = 137;
			Match(LBRACE);
			State = 141;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & ((1L << (GRAMMAR - 56)) | (1L << (TREE - 56)) | (1L << (TOKEN_REF - 56)) | (1L << (RULE_REF - 56)))) != 0)) {
				{
				{
				State = 138;
				option();
				}
				}
				State = 143;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 144;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParserOptionsSpecContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPTIONS() { return GetToken(ANTLRv2Parser.OPTIONS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ANTLRv2Parser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ANTLRv2Parser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OptionContext[] option() {
			return GetRuleContexts<OptionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptionContext option(int i) {
			return GetRuleContext<OptionContext>(i);
		}
		public ParserOptionsSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parserOptionsSpec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.EnterParserOptionsSpec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.ExitParserOptionsSpec(this);
		}
	}

	[RuleVersion(0)]
	public ParserOptionsSpecContext parserOptionsSpec() {
		ParserOptionsSpecContext _localctx = new ParserOptionsSpecContext(Context, State);
		EnterRule(_localctx, 8, RULE_parserOptionsSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			Match(OPTIONS);
			State = 147;
			Match(LBRACE);
			State = 151;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & ((1L << (GRAMMAR - 56)) | (1L << (TREE - 56)) | (1L << (TOKEN_REF - 56)) | (1L << (RULE_REF - 56)))) != 0)) {
				{
				{
				State = 148;
				option();
				}
				}
				State = 153;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 154;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TreeParserOptionsSpecContext : AttributedParseTreeNode {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPTIONS() { return GetToken(ANTLRv2Parser.OPTIONS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(ANTLRv2Parser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(ANTLRv2Parser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OptionContext[] option() {
			return GetRuleContexts<OptionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptionContext option(int i) {
			return GetRuleContext<OptionContext>(i);
		}
		public TreeParserOptionsSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_treeParserOptionsSpec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.EnterTreeParserOptionsSpec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IANTLRv2ParserListener typedListener = listener as IANTLRv2ParserListener;
			if (typedListener != null) typedListener.ExitTreeParserOptionsSpec(this);
		}
	}

	[RuleVersion(0)]
	public TreeParserOptionsSpecContext treeParserOptionsSpec() {
		TreeParserOptionsSpecContext _localctx = new TreeParserOptionsSpecContext(Context, State);
		EnterRule(_localctx, 10, RULE_treeParserOptionsSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156;
			Match(OPTIONS);
			State = 157;
			Match(LBRACE);
			State = 161;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (((((_la - 56)) & ~0x3f) == 0 && ((1L << (_la - 56)) & ((1L << (GRAMMAR - 56)) | (1L << (TREE - 56)) | (1L << (TOKEN_REF - 56)) | (1L << (RULE_REF - 56)))) != 0)) {
				{
				{
				State = 158;
				option();
				}
				}
				State = 163;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 164;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
